# courses

./: LICENSE  pyproject.toml
docs/: mcp.md  pipelines.md
