[project]
name = "courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pandera>=0.26.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
